# practice-sosnin

./: .gitignore  CMakeLists.txt
10-211122/: README.md
10-211122/examples/: 01.cpp  02.cpp
10-211122/problem/: 01-boost-header-only.cpp  02-boost-link-filesystem.input.txt  10-add-virtual.cpp  11-add-free-function.cpp  12-add-visitor.cpp  CMakeLists.txt  build.sh
10-211122/problem/03-boost-dll/: main.cpp  plugin_b.cpp  secret_api.h
10-211122/problem/20-boost-dll-has/: main.cpp  plugin_b.cpp
10-211122/solution/: 02-boost-link-filesystem.cpp  10-add-virtual.cpp  11-add-free-function.cpp  12-add-visitor.cpp
10-211122/solution/03-boost-dll/: main.cpp  plugin_a.cpp
10-211122/solution/20-boost-dll-has/: api.h  main.cpp  plugin_b.cpp  secret_api.h
12-211206/: lambda.cpp
lab01-examples/: 210913.cpp
lab02-examples/: 210913-2.cpp  input.txt
lab04-examples/: 210927.cpp
lab05-examples/: 211004.cpp  lib.cpp  lib.hpp
